--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ background-size: cover}
 
 h1 {color: C8A1E0; font-size: 60px; font-family: simsun}
 
-h2 {color:white; font-size: 45px; font-family: simsun}
+h2 {color:black; font-size: 45px; font-family: simsun}
 
-h3 {color:white; font-size: 35px; font-family: simsun}
+h3 {color:black; font-size: 35px; font-family: simsun}
 
-p {color:white; font-size: 20px; font-family: kaiti}
+p {color:black; font-size: 20px; font-family: kaiti}
 </style>
 
 </head>
